<resources>
    <string name="app_name">VideoToPhoto</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_share">Share</string>
    <string name="title_rateUS">Rate Us</string>
    <string name="editPhoto">Edit</string>
    <string name="delete">Delete</string>
    <string name="info">Information</string>
    <string name="Exit">Exit</string>
    <string name="ExitQuestion">Do you want to Exit? Save before Exit,please</string>

    <string name="title_about">About</string>
    <string name="dieuKhoan">http://hdpsolution.com/privacy_policy/CameraApps/PrivacyPolicyCameraApps.htm</string>
    <string name="title_select_video">Select video form:</string>
    <string name="library">Library</string>
    <string name="new_video_reconrding">New video recording</string>
    <string name="select_video">Select Video</string>
    <string name="gallery">Gallery</string>
    <string name="sideshow_maker">Sideshow Maker</string>
    <string name="setting">Setting</string>
    <string name="cancel">Cancel</string>
    <string name="quickcapture">QuickCapture</string>
    <string name="automatic">Automatic</string>
    <string name="enterduration">Enter Time: (Seconds)</string>
    <string name="ok">Ok</string>
    <string name="enterTime">Enter Time</string>
    <string name="error">Error</string>
    <string name="snaperror">Please input time snap less than duration of video!</string>
    <string name="snapevery">Snap every</string>
    <string name="seconds">Seconds</string>
    <string name="nullimesnap">You cant set null time snap!</string>
    <string name="resolution">Resolution</string>
    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="example">example: 2.0</string>
    <string name="done">DONE</string>
    <string name="wait">"Wait a moment...."</string>
    <string name="FileName">File Name</string>
    <string name="FileSize">File Size</string>
    <string name="Path">Path</string>
    <string name="Details">Details</string>
    <string name="Resolution">Resolution</string>
    <string name="Date">Date</string>
    <string name="cropImage">Crop Image</string>
    <string name="editText">Edit Text</string>
    <string name="Sticker">Sticker</string>
    <string name="Paint">Paint</string>
    <string name="Opacity">Opacity</string>
    <string name="Best">Best</string>
    <string name="VeryHigh">VeryHigh</string>
    <string name="High">High</string>
    <string name="Medium">Medium</string>
    <string name="Low">Low</string>
    <string name="inputText">Input Text</string>

    <string name="DeleteQuestion">Are you sure to delete this image?</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>


    <!-- list Preferences Name-->
    <string name="file_format">File Format</string>
    <string name="quality">Quality</string>
    <string name="size">Size</string>
    <!-- TODO: Remove or change this placeholder text -->



</resources>