<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/setting">


        <ListPreference

            android:dialogTitle="@string/file_format"
            android:entries="@array/settings_list_fileformat_entries"
            android:entryValues="@array/settings_list_fileformat_values"
            android:key="list_file_format"
            android:summary="Click to show a list to choose from"
            android:title="@string/file_format"
            android:defaultValue="JPG"/>

        <ListPreference

            android:dialogTitle="@string/quality"
            android:entries="@array/settings_list_quality_entries"
            android:entryValues="@array/settings_list_quality_values"
            android:key="list_quality"
            android:summary="Click to show a list to choose from"
            android:title="@string/quality"
            android:defaultValue="High"
            />
        <ListPreference

            android:dialogTitle="@string/size"
            android:entries="@array/settings_list_size_entries"
            android:entryValues="@array/settings_list_size_values"
            android:key="list_size"
            android:summary="Click to show a list to choose from"
            android:title="@string/size"
            android:defaultValue="1.5x"/>
    </PreferenceCategory>


</PreferenceScreen>