<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounds_dialog"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:text="@string/title_select_video"
        android:textColor="@color/Black"
        android:textSize="16dp"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/lnLibrary"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/gallery"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="@string/library"
            android:textColor="@color/Black"
            android:textSize="14dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lnNewVideo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/photography" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="@string/new_video_reconrding"
            android:textColor="@color/Black"
            android:textSize="14dp" />
    </LinearLayout>
</LinearLayout>